--- a/vue-app/package.json
+++ b/vue-app/package.json
@@ -12,6 +12,7 @@
     "ant-design-vue": "^1.5.1",
     "core-js": "^3.6.4",
     "moment": "^2.24.0",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
